# opengl-glm-dearimgui

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/glad/: glad.c  glad.h
src/: main.cpp
